fixed spacing and fixed template margins

--- a/src/components/more-analyses/more-analyses.module.scss
+++ b/src/components/more-analyses/more-analyses.module.scss
@@ -4,22 +4,21 @@ $darkGrey: #666666;
 
 .analyses {
   text-align: left;
+  margin-bottom: 1rem;
+
 }
 
 .heading {
-  font-size: 1.17em;
-  color: $font-body-copy;
-  padding-bottom: 1rem;
-  text-transform: uppercase;
-  text-align: left;
-}
+  border-bottom: 1px solid $darkGrey;
+  padding-bottom: 0.25rem;
 
-//.tile {
-//}
-//
-//.tiles {
-//
-//}
+  h1 {
+    color: $darkGrey;
+    padding-bottom: 0.25rem;
+    text-transform: uppercase;
+    text-align: left;
+  }
+}
 
 .text {
   font-size: 12px;
@@ -30,14 +29,14 @@ $darkGrey: #666666;
 
   .title {
     color: #2272CE;
-    height: 1rem;
+    height: 2rem;
     margin-bottom: 1rem;
     font-size: 18px;
   }
 
   .subtitle {
      font-size: 20px;
-     height: 4rem;
+     height: 6rem;
      color: $font-body-copy;
      margin-bottom: 0;
      margin-top: 0;
@@ -51,29 +50,10 @@ $darkGrey: #666666;
   width: 100%;
 }
 
-//@media (min-width: $tablet) and (max-width: $desktop - 1) {
-//  .text {
-//    text-align: right;
-//  }
-//
-//  .tile {
-//    border-bottom: unset;
-//  }
-//}
-//
-//@media (max-width: $tablet - 1) {
-//  .text {
-//    text-align: right;
-//  }
-//
-//  .heading {
-//    border-bottom: 1px solid $font-body-copy;
-//  }
-//}
-
 @media screen and (max-width: $tablet) {
   .tile {
     border-bottom: 1px solid #ddd;
+    margin-top: 1rem !important;
 
     .text {
       width: 50%;
@@ -87,6 +67,7 @@ $darkGrey: #666666;
     .image {
       width: 50%;
       float: left;
+      margin-bottom: 1rem;
     }
   }
 }
